Intégration de la branche de dev 0.8.0